fix: resolve layout shift and grid breakage on strength page reload

--- a/src/app/(main)/strength/StrengthPage.module.css
+++ b/src/app/(main)/strength/StrengthPage.module.css
@@ -19,7 +19,7 @@
 }
 
 .strength-container {
-	display: block grid;
+	display: grid;
 	height: 100%;
 	border: var(--border-large);
 	border-radius: var(--border-radius-small);
@@ -32,18 +32,30 @@
 	}
 }
 
+.strength-hero-wrapper {
+	width: 100%;
+	height: 100%;
+}
+
 .strength-content {
 	width: 100%;
 	height: 100%;
-	display: block grid;
+	display: grid;
 	grid-template-columns: 1fr 1fr;
-	grid-template-rows: 1fr 1fr;
 	gap: 15px;
 	overflow-y: scroll;
+
+	& > :nth-child(3) {
+		grid-column: span 2;
+	}
 
 	@media (width < 1280px) {
 		height: auto;
 		grid-template-columns: 1fr;
 		padding-inline: 20px;
+
+		& > :nth-child(3) {
+			grid-column: span 1;
+		}
 	}
 }
