--- a/src/features/strength/components/strength-log-info/StrengthLogInfo.module.css
+++ b/src/features/strength/components/strength-log-info/StrengthLogInfo.module.css
@@ -8,7 +8,7 @@
 
 .strength-log-info-content {
 	height: 100%;
-	display: block grid;
+	display: grid;
 	grid-template-columns: auto;
 	gap: 20px;
 	border: 2px solid var(--color-primary-brown-light);
@@ -16,7 +16,7 @@
 }
 
 .strength-log-box {
-	display: block grid;
+	display: grid;
 	grid-template-columns: auto;
 	grid-template-rows: auto 1fr auto;
 	grid-template-areas:
@@ -41,7 +41,7 @@
 }
 
 .strength-log-list-content {
-	display: block grid;
+	display: grid;
 	grid-area: content;
 }
 
@@ -57,8 +57,9 @@
 .strength-log-list {
 	width: 100%;
 	max-height: 208px;
-	display: block grid;
-	grid-template-rows:;
+	min-height: 208px;
+	display: grid;
+
 	justify-content: center;
 	gap: 10px;
 	padding-inline: 10px;
@@ -75,7 +76,7 @@
 .strength-log-loading-text {
 	font-size: 0.875rem;
 	font-weight: var(--font-weight-normal);
-	display: block grid;
+	display: grid;
 	place-items: center;
 	padding-block-start: 15px;
 }
@@ -86,7 +87,7 @@
 }
 
 .strength-log-link-box {
-	display: block grid;
+	display: grid;
 	place-items: center;
 	grid-area: footer;
 }
